--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "nodemon": "^2.0.15",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.4.1"
   }
 }
