--- a/package.json
+++ b/package.json
@@ -18,12 +18,20 @@
   },
   "homepage": "https://github.com/pedroslev/pb-28220#readme",
   "dependencies": {
+    "better-sqlite3": "^7.5.0",
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "knex": "^1.0.3",
+    "mssql": "^8.0.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "oracledb": "^5.3.0",
+    "pg": "^8.7.3",
     "pug": "^3.0.2",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "sqlite3": "^5.0.2"
   }
 }
