--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "mongoose": "^6.2.6",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
     "socket.io": "^4.4.1"
