--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "pug": "^3.0.2",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^6.0.0"
   }
 }
