--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "better-sqlite3": "^7.5.0",
     "body-parser": "^1.19.1",
+    "connect-mongo": "^4.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
     "knex": "^1.0.3",
     "mssql": "^8.0.2",
     "mysql": "^2.18.1",
