--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "oracledb": "^5.3.0",
+    "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
     "socket.io": "^4.4.1",
