randoms, /info route and .envs with dotenvs

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "better-sqlite3": "^7.5.0",
     "body-parser": "^1.19.1",
     "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
