profiler, lo test y logs

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/pedroslev/pb-28220#readme",
   "dependencies": {
+    "artillery": "^2.0.0-14",
+    "autocannon": "^7.8.1",
     "better-sqlite3": "^7.5.0",
     "body-parser": "^1.19.1",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
@@ -27,6 +30,7 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "knex": "^1.0.3",
+    "log4js": "^6.4.6",
     "mssql": "^8.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
