--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
   },
   "homepage": "https://github.com/pedroslev/pb-28220#readme",
   "dependencies": {
+    "blueimp-md5": "^2.19.0",
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.3",
+    "log4js": "^6.4.7",
     "mongoose": "^6.2.6",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.0.0",
     "pug": "^3.0.2",
     "socket.io": "^4.4.1"
   }
