--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0",
     "pug": "^3.0.2",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "twilio": "^3.77.0"
   }
 }
