--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "homepage": "https://github.com/pedroslev/pb-28220#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "blueimp-md5": "^2.19.0",
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.2",
+    "express": "^4.18.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.3",
     "log4js": "^6.4.7",
@@ -35,5 +36,10 @@
     "pug": "^3.0.2",
     "socket.io": "^4.4.1",
     "twilio": "^3.77.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "supertest": "^6.2.3"
   }
 }
