--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.3",
+    "graphql": "^16.5.0",
     "log4js": "^6.4.7",
     "mongoose": "^6.2.6",
     "nodemailer": "^6.7.5",
