--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "pb-28220",
-  "type": "module",
   "description": "Repositorio para la cursada de programacion backend camada 28220",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server.js"
+    "dev": "nodemon ./app.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,9 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.3",
+    "koa": "^2.13.4",
+    "koa-body": "^5.0.0",
+    "koa-router": "^10.1.1",
     "log4js": "^6.4.7",
     "mongoose": "^6.2.6",
     "nodemailer": "^6.7.5",
