frontend and api scheme

--- a/package.json
+++ b/package.json
@@ -1,38 +1,45 @@
 {
   "name": "pb-28220",
-  "description": "Repositorio para la cursada de programacion backend camada 28220",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pedroslev/pb-28220.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pedroslev/pb-28220/issues"
-  },
-  "homepage": "https://github.com/pedroslev/pb-28220#readme",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "blueimp-md5": "^2.19.0",
-    "body-parser": "^1.19.1",
-    "ejs": "^3.1.6",
-    "express": "^4.17.2",
-    "express-handlebars": "^6.0.2",
-    "express-session": "^1.17.3",
-    "log4js": "^6.4.7",
-    "mongoose": "^6.2.6",
-    "nodemailer": "^6.7.5",
-    "nodemon": "^2.0.15",
-    "passport": "^0.5.2",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.0.0",
-    "pug": "^3.0.2",
-    "socket.io": "^4.4.1",
-    "twilio": "^3.77.0"
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.30.1"
   }
 }
