--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules/# See https://help.github.com/articles/ignoring-files/ for more abo
 
 # production
 /build
+/api/.env
 
 # misc
 .DS_Store
